# grafana-simplex-alerter

./: .gitignore  CLAUDE.md  Dockerfile  README.md  example_config.yml  flake.nix
.beads/: beads.db  beads.db-wal  config.yaml  issues.jsonl  last-touched
.beads/.br_history/: issues.20260430_095731_827038594.jsonl  issues.20260430_095734_482378117.jsonl  issues.20260430_095736_705027977.jsonl  issues.20260430_095740_042961724.jsonl  issues.20260430_095741_983977537.jsonl  issues.20260430_095743_543874316.jsonl  issues.20260430_095745_052323260.jsonl  issues.20260430_095746_634500398.jsonl  issues.20260430_095748_296675634.jsonl  issues.20260430_095749_970885856.jsonl  issues.20260430_095751_637798107.jsonl  issues.20260430_095753_041714689.jsonl  issues.20260430_100824_395287420.jsonl  issues.20260430_100829_536670890.jsonl  issues.20260430_100831_701693501.jsonl  issues.20260430_100833_502380642.jsonl  issues.20260430_100834_914091372.jsonl  issues.20260430_100836_392893462.jsonl  issues.20260430_105005_553998286.jsonl  issues.20260430_105005_790193370.jsonl  issues.20260430_105006_004250397.jsonl  issues.20260430_105006_228105875.jsonl  issues.20260430_105006_435516319.jsonl  issues.20260430_105006_663305248.jsonl  issues.20260430_105124_690443375.jsonl  issues.20260430_120118_262493475.jsonl  issues.20260430_120118_510964449.jsonl  issues.20260430_120118_781894183.jsonl  issues.20260430_120119_017542715.jsonl  issues.20260430_120119_243536629.jsonl  issues.20260430_120119_483576281.jsonl  issues.20260430_120119_731586242.jsonl  issues.20260430_120120_005415253.jsonl  issues.20260430_120120_272184959.jsonl  issues.20260430_120120_531195882.jsonl  issues.20260430_120120_826439800.jsonl  issues.20260430_120121_125220871.jsonl
.github/workflows/: ci.yml
.omc/: MISSION.md  project-memory.json
.omc/cross-repo/: homeserver-deploy-bugfix.json
.omc/plans/: bug-fixes-security-test-suite.md  homeserver-deploy-bugfix.md  simplex-derivations-docker-minimize.md
.omc/sessions/: 051e7bd1-898b-455b-9b0f-f350db10e998.json  39f96ec7-71e9-436b-91c7-be2ef1db984b.json  a6b8bd94-b691-47f4-bcde-a35f6051d651.json
.omc/state/: mission-state.json
nix/: uv_setup.nix
simplex-alerter/: pyproject.toml
simplex-alerter/simplex_alerter/: __init__.py  __main__.py  chat.py  config.py  telemetry.py  webhook.py
simplex-alerter/simplex_alerter/api/: __init__.py
simplex-alerter/simplex_alerter/simpleXClient/: __init__.py  client.py
simplex-alerter/simplex_alerter/simpx/: client.py  command.py  queuex.py  response.py  transport.py
simplex-alerter/simplex_alerter/webhook/: __init__.py  request_models.py
simplex-alerter/simplex_alerter/webhook/request_models/: __init__.py  forgejo.py  grafana.py  servarr.py
simplex-alerter/tests/: conftest.py
simplex-alerter/tests/e2e/: conftest.py  test_full_alert_flow.py
simplex-alerter/tests/integration/: test_deadmans_switch.py  test_webhook_routing.py
simplex-alerter/tests/unit/: test_chat_utils.py  test_config.py  test_request_models_forgejo.py  test_request_models_grafana.py  test_request_models_servarr.py
(+5 files in other folders)
