[project]
name = "simplex-alerter"
version = "1.6.0rc1"
description = "webhook based simpleX alerter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "observlib",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-instrumentation-asyncio>=0.53b1",
    "opentelemetry-instrumentation-fastapi>=0.54b1",
    "opentelemetry-instrumentation-threading>=0.53b1",
    "opentelemetry-sdk>=1.33.1",
    "prometheus-client>=0.22.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.2",
    "opentelemetry-instrumentation-asgi>=0.54b1",
    "jinja2>=3.1.6",
    "websockets>=15.0.1",
    "pexpect>=4.9.0",
    "aiofiles>=25.1.0",
]

[project.scripts]
simplex-alerter = "simplex_alerter:__main__.run"

[tool.uv.sources]
observlib = { git = "https://github.com/ForgottenBeast/observlib.git", subdirectory = "observlib" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "time-machine>=2.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["simplex_alerter"]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 60
show_missing = true
